[package]
authors = ["Hobonatius Von Street <ceo_hobo@mitmotion.co.za>"]
edition = "2021"
name = "thp-client-i18n"
description = "Optional crate for internalization and diagnostic of existing localizations for frontends to consume"
version = "0.13.0"

[dependencies]
# Assets
common-assets = {package = "thp-common-assets", path = "../../common/assets"}
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
# Localization
unic-langid = { version = "0.9"}
intl-memoizer = { git = "https://github.com/ceohobo1986/fluent-rs.git", branch = "patched"}
fluent = { git = "https://github.com/ceohobo1986/fluent-rs.git", branch = "patched"}
fluent-bundle = { git = "https://github.com/ceohobo1986/fluent-rs.git", branch = "patched"}
# Utility
hashbrown = { version = "0.12", features = ["serde", "nightly"] }
deunicode = "1.0"
tracing = "0.1"
# Bin
clap = { version = "3.1.8", features = ["suggestions", "std"], default-features = false, optional = true }
fluent-syntax = { git = "https://github.com/ceohobo1986/fluent-rs.git", branch = "patched"}

[[bin]]
name = "i18n-check"
required-features = ["bin"]

[[bin]]
name = "i18n-csv"
required-features = ["stat"]

[features]
bin = ["clap"]
stat = []
