[package]
authors = ["Hobonatius Von Street <ceo_hobo@mitmotion.co.za>"]
edition = "2021"
name = "thp-common-base"
description = "minimal dependency for crates to now depend on whole common"
version = "0.10.0"

[features]
tracy = ["tracy-client"]

[dependencies]
tracing = { version = "0.1", default-features = false }
directories-next = "2.0"

# Tracy
tracy-client = { version = "0.13.1", optional = true }
