[package]
name = "thp-plugin-rt"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2021"

[dependencies]
plugin-api = { package = "thp-plugin-api", path = "../api" }
plugin-derive = { package = "thp-plugin-derive", path = "../derive"}
serde = {version = "1.0.118", features = ["derive"]}
bincode = "1.3.1"

[[example]]
name = "hello"
crate-type = ["cdylib"]

[dev-dependencies]
plugin-derive = { package = "thp-plugin-derive", path = "../derive"}
