[package]
authors = ["juliancoffee <lightdarkdaughter@gmail.com>"]
edition = "2021"
name = "thp-voxygen-i18n-helpers"
description = "Crate for internalization and diagnostic of existing localizations."
version = "0.10.0"

[dependencies]
common-net = {package = "thp-common-net", path = "../../common/net"}
common = {package = "thp-common", path = "../../common"}
i18n = {package = "thp-client-i18n", path = "../../client/i18n"}
# Utility
tracing = "0.1"